(lang dune 3.16)

(name ocamlMessager)

(generate_opam_files true)

(source
 (github WillRabalais04/ocamlMessager))

(authors "Will Rabalais")

(maintainers "Will Rabalais")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocamlMessager)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

